# anemometer

./: sdkconfig.old
docker_mosquitto/: Dockerfile  README.md
fw_screen/main/: data.c  data.h  lvgl_ui.c  lvgl_ui.h
main/: data.c  data.h  lvgl_ui.c  lvgl_ui.h  lvgl_utils.h  tusb_cdc.c  tusb_cdc.h
server/: Cargo.toml  README.md
server/src/: main.rs
