[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }

[dependencies.tokio-serial]
version = "5.4.5"
default-features = false
features = []
